# ANSYS-OpenFOAM

./: .gitignore  .gitmodules  LICENSE  README.md
ANSYS-wrapper/: main.py
Analytical-solution/: analytical-solver.py
GOTE/: connection.py  executors.py  solver.py  task.py
GOTE/problem/: CMakeLists.txt
GOTE/problem/include/: macros.h  stronginc3_problem.h
GOTE/problem/src/: stronginc3_problem.cpp
GOTE/scheduler/: CMakeLists.txt
GOTE/scheduler/include/: bridge.h  calculation_tasks.h  problem_interface.h  scheduler.h  stronginc3_problem.h
GOTE/scheduler/src/: scheduler.cpp  stronginc3_problem.cpp
GOTE/utils/: logger.py
OpenFOAM-wrapper/: beam_solver.py  blockMeshGenerator.py  format_table.py  generator.py  rail_solver.py  run_foam_range.py  run_foam_single.py  runner.py
OpenFOAM-wrapper/configs/: execution.py  fragmentation.py  mesh.py
OpenFOAM-wrapper/executor/: executor.py
OpenFOAM-wrapper/mesh_generator/: generator.py  mesh_generator.py  point.py  rail_generator.py  simple_generator.py  template.py
OpenFOAM-wrapper/runner/: runner.py
OpenFOAM-wrapper/tests/: mesh_generator_tests.py  test_executor.py  test_generator.py  test_logger.py  test_mesh_config.py  test_mesh_generator.py  test_mesh_point.py  test_mesh_rail_generator.py
OpenFOAM-wrapper/tests/mesh_reference/: foam-7-mm-reference.txt
OpenFOAM-wrapper/utils/: files.py  logger.py  messages.py  profiler.py
